--- a/style.css
+++ b/style.css
@@ -1,10 +1,14 @@
 body {
-    background: skyblue;
-    text-align: center;
+  background: skyblue;
+  text-align: center;
 }
 
 .wrapper {
-    width: 100%;
-    padding: 20px;
-    box-sizing: border-box;
+  width: 100%;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+img {
+  transform: rotateZ(-90deg) translateY(200px) scale(0.7);
 }
